--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>All Routes On Map</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-gpx/2.2.0/gpx.min.js"></script>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; }
   </style>
 </head>
 <body>
+  <div id="map"></div>
   <script>
 ///////////////////////////////////////////////////////////////////////////
     function parseGPX(gpxText) {
@@ -25,6 +29,11 @@
 
 async function main() {
 
+    let map;
+          L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+          attribution: '© OpenStreetMap contributors'
+        }).addTo(map);
+ 
   const owner = 'Chr1sG1thub';
   const repo = 'TownsOnMap';
   const path = 'gpx';
@@ -45,7 +54,15 @@ async function main() {
         const fileResponse = await fetch(file.download_url);
         const gpxText = await fileResponse.text();
         const points = parseGPX(gpxText);
-      } catch (fileError) {
+ const gpxLayer = new L.GPX(gpxText, {
+  async: true,
+})
+.on('loaded', function (e) {
+  const gpxLayer = e.target;
+  map.fitBounds(gpxLayer.getBounds());
+}
+
+     } catch (fileError) {
         console.error(`Error processing ${file.name}:`, fileError);
       }
     }
