--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
             const fileResponse = await fetch(file.download_url);
             const gpxText = await fileResponse.text();
             
-            const gpxLayer = new L.GPX(gpxText, { async: true })
+            const gpxLayer = new L.GPX(gpxText, { 
+  async: true,
+  markers: {
+    startIcon: null,
+    endIcon: null
+  }
+})
               .on('loaded', function(e) {
                 const layer = e.target;
                 allBounds.extend(layer.getBounds());
