--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
       } catch (error) {
         console.error('GitHub API error:', error);
       }
+
+          const coffeecup = L.icon({iconUrl: 'coffee.png', iconSize: [30,30], iconAnchor: [15,15]});
+      
+  const cMarker = L.marker([42.64057791049862), 2.5210721155446802], {
+        icon: coffeecup,
+        zIndexOffset: 1000
+      }).addTo(map);*/
+
+      
     }
 
     main();
