--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
           const coffeecup = L.icon({iconUrl: 'coffee.png', iconSize: [30,30], iconAnchor: [15,15]});
       
-  const cMarker = L.marker([42.64057791049862), 2.5210721155446802] {
+  const cMarker = L.marker([42.64057791049862, 2.5210721155446802] {
         icon: coffeecup,
         zIndexOffset: 1000
       }).addTo(map);*/
