--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
   const cMarker = L.marker([42.64057791049862, 2.5210721155446802] {
         icon: coffeecup,
         zIndexOffset: 1000
-      }).addTo(map);*/
-
-      
+      }).addTo(map);
     }
 
     main();
