--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ const cafes = [
 {name: 'Sournia', lat: 42.7277771036479, lon: 2.44313549960318},
 {name: 'St Cyprien (CoDep)', lat: 42.6347646756857, lon: 3.03143126558602},
 {name: 'St Estève (CoDep)', lat: 42.7173404932789, lon: 2.83902762191944},
+{name: 'St Laurent de la Salanque (CoDep)', lat: 42.7791720128907, lon: 2.98083246402099},
 {name: 'Tautavel', lat: 42.813829994083, lon: 2.74530947736345},
 {name: 'Thuir', lat: 42.6334375349301, lon: 2.75586997723329},
 {name: 'Thuir', lat: 42.6334643607749, lon: 2.75583123536497},
