--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         console.error('GitHub API error:', error);
       }
 
-      const coffeecup = L.icon({ iconUrl: 'coffee.png', iconSize: [30, 30], iconAnchor: [15, 15] });
+      const coffeecup = L.icon({ iconUrl: 'black.png', iconSize: [30, 30], iconAnchor: [15, 15] });
 
       const cafes = [
         { name: 'Ansignan', lat: 42.7604985311888, lon: 2.51548824116038 },
