--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         console.error('GitHub API error:', error);
       }
 
-      const coffeecup = L.icon({ iconUrl: coffee.png', iconSize: [30, 30], iconAnchor: [15, 15] });
+      const coffeecup = L.icon({ iconUrl: 'coffee.png', iconSize: [30, 30], iconAnchor: [15, 15] });
       const blackcup = L.icon({ iconUrl: 'black.png', iconSize: [30, 30], iconAnchor: [15, 15] });
 
       const cafes = [
@@ -84,7 +84,7 @@
         { name: 'Calce', lat: 42.7586743795036, lon: 2.7540345277013 },
         { name: 'Caramany', lat: 42.7349037497997, lon: 2.57078666061756 },
         { name: 'Col de la Llose', lat: 42.535723405321, lon: 2.14212389690829 },
-       { name: 'Fourques', lat: 42.5816331774613, lon: 2.77897715955183 },
+        { name: 'Fourques', lat: 42.5816331774613, lon: 2.77897715955183 },
         { name: 'Latour-de-France', lat: 42.7688465372813, lon: 2.65542043556673 },
         { name: 'Llauro', lat: 42.5494107672742, lon: 2.74369853207945 },
         { name: 'Llupia', lat: 42.6228251779905, lon: 2.76983561282064 },
